Removing button change and fixing model view size, overflow

--- a/src/app/shared/arelement/arelement.component.css
+++ b/src/app/shared/arelement/arelement.component.css
@@ -2,10 +2,12 @@
   object-fit: contain;
   height: 80vh;
   width:100%;  
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
 model-viewer {
   width: 40vh;
-  height: 80vh;
+  height: 70vh;
 } 
 #controls {
   position: absolute;
